# ComfyUI_Qwen2-Audio-7B-Instruct-Int4

./: LICENSE  README.md  __init__.py  pyproject.toml  qwen2_audio_nodes.py  requirements.txt  util_nodes.py
examples/: Chat_with_audio_workflow.json  Chat_with_text_workflow.json
web/js/: previewAudio.js  uploadAudio.js
